# zig-project-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
migrations/2025-07-05-110343_create_tables/: down.sql  up.sql
src/: http_server.rs  main.rs  schema.rs  zig_config.rs  zig_error.rs
src/db/: migrations.rs  mod.rs  model_dao.rs  models.rs  schema.rs
