[package]
name = "zig-project"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.8", features = ["json"] }
anyhow = "1.0"
actix-web = "4.5.1"
tokio = { version = "1.40", features = ["full"] }
diesel = { version = "2", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
json = "0.12"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1", features = ["v4"] }